# package_laarid-bintray-dist-creator

./: .travis.yml  Makefile.am  README.md  configure.ac
debian/: README  README.source  changelog  control  copyright  libandroid-dummy0.symbols  rules  watch
include/dummy/: dummy.h
include/laarid/: dummy.h
src/: dummy.c
